- blocks
-
JDK-8316239 JFR: fatal error: refcount has gone to zero
-
- Closed
-
-
JDK-8321822 ZGC: SIGSEGV in "JFR Recorder Thread"
-
- Closed
-
-
JDK-8343003 assert(lower->pc_offset() < pc_offset) failed: sanity
-
- Closed
-
-
JDK-8302350 JfrThreadSampler failed with "assert((is_native() && bci == 0) || (!is_native() && 0 <= bci && bci < code_size())) failed: illegal bci: 0 for non-native method"
-
- Closed
-
- causes
-
JDK-8360306 RISC-V: Cross build fails due to GCC13 warning stringop-overflow after JDK-8352251
-
- Open
-
-
JDK-8357829 Commented out sample limit in JfrSamplerThread::task_stacktrace
-
- Resolved
-
-
JDK-8360201 JFR: Initialize JfrThreadLocal::_sampling_critical_section
-
- Resolved
-
-
JDK-8360312 Serviceability Agent tests fail with JFR enabled due to unknown thread type JfrRecorderThread
-
- Resolved
-
-
JDK-8371368 SIGSEGV in JfrVframeStream::next_vframe() on arm64
-
- Closed
-
-
JDK-8357832 Shenandoah: Fill out JfrVframeStream walk_continuation comment
-
- In Progress
-
-
JDK-8357830 JfrVframeStream::_cont_entry shadows super-class field
-
- Resolved
-
- duplicates
-
JDK-8316239 JFR: fatal error: refcount has gone to zero
-
- Closed
-
-
JDK-8321822 ZGC: SIGSEGV in "JFR Recorder Thread"
-
- Closed
-
-
JDK-8302350 JfrThreadSampler failed with "assert((is_native() && bci == 0) || (!is_native() && 0 <= bci && bci < code_size())) failed: illegal bci: 0 for non-native method"
-
- Closed
-
-
JDK-8357087 JfrThreadSampler crash: SEGV in PcDescCache::find_pc_desc
-
- Closed
-
-
JDK-8150425 Deadlock potential when sampling suspended threads
-
- Closed
-
-
JDK-8343003 assert(lower->pc_offset() < pc_offset) failed: sanity
-
- Closed
-
-
JDK-8357087 JfrThreadSampler crash: SEGV in PcDescCache::find_pc_desc
-
- Closed
-
-
JDK-8321098 Cooperative JFR Sampling
-
- Closed
-
- relates to
-
JDK-8168445 make pd_get_top_frame_for_profiling more robust
-
- Open
-
-
JDK-8356587 Missing object ID X in pool jdk.types.Method
-
- Resolved
-
-
JDK-8373106 JFR suspend/resume deadlock on macOS in pthreads library
-
- Resolved
-
-
JDK-8357810 [s390x] Port JEP 518 - JFR Cooperative Sampling
-
- Open
-
-
JDK-8368844 JFR: Improve sampling accuracy
-
- In Progress
-
-
JDK-8358429 JFR: minimize the time the Threads_lock is held for sampling
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk/bbceab07
-
Review(master)
openjdk/jdk/24296