src/hotspot/share/jfr/utilities/jfrLogTagSets.hpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -56,6 +56,7 @@
   JFR_LOG_TAG(jfr, system, streaming) \
   JFR_LOG_TAG(jfr, system, throttle) \
   JFR_LOG_TAG(jfr, system, periodic) \
+  JFR_LOG_TAG(jfr, system, sampling) \
   JFR_LOG_TAG(jfr, periodic) \
   JFR_LOG_TAG(jfr, metadata) \
   JFR_LOG_TAG(jfr, event) \
